# Thesis

./: LICENSE
AIBH_Hongkai_2019-master/: README.md
AIBH_Hongkai_2019-master/code/: cnnv2.py  datapkg.py  normalization.py  read_final.py  seperate.py  visual.py
Paper/: fishdbc_clustering.py  hkm.py  wcds_clustering.py
Paper/WiSARD/: LICENSE  README.md  setup.cfg  setup.py
Paper/WiSARD/WCDS/: clusterers.py  discriminators.py  neurons.py  test.py  wcds.py
Paper/WiSARD/WCDS/WCDS.egg-info/: PKG-INFO  SOURCES.txt
Temporal/: DEC.py  MobiAct100.html  SLH_1_1_annotated.csv  Temporal_Fusion.py  UCI.py  UCI100.html  WISDM.py  autoencoder.py  lstm_autoencoder_har.py  processing.py  te_utils.py  uci_utils.py  visual.py
Visual/: clusterplot_test.py  testplot.py  tmap_test.py  umap_test.py
Visual/ClusterPlot-master/: LICENSE  README.md  setup.py
Visual/ClusterPlot-master/ClusterPlot/: ClusterPlot.py
Visual/ClusterPlot-master/cluster_plot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Visual/ClusterPlot-master/data/MNIST_AE/: mnist_encoded_to_32_dim.npy  mnist_encoded_to_4_dim.npy
Visual/ClusterPlot-master/examples/: Cross.ipynb  Hourglass.ipynb  MNIST_3_Levels _AE.ipynb
Visual/ClusterPlot-master/examples/utils/: DataSetFactory.py  PolygonsFactory.py
