[metadata]
name = WCDS
version = 0.1.0
author = Martin
description = Wisard for clustering data streams
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requries = >= 3.6

[options.packages.find]
where = src